--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,7 +25,7 @@ layout: default
               <p>{{ small-module.text | escape }}</p>
             </div>
 
-            <!--<div class="blue-line" />-->
+            <div class="blue-line" />
           </li>
         {% endfor %}
       </ul>
@@ -56,7 +56,7 @@ layout: default
               </p>
             </div>
 
-            <!--<div class="blue-line" />-->
+            <div class="blue-line" />
 
             <a href=" {{ side-module.URL | escape }} " target="_blank"><button>{{ side-module.title | escape }}'s Portfolio</button></a>
             
