svg compatibility with firefox and ie

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,20 +1,55 @@
 <header id="hero">
   <div id="lights" class="svg-container">
-    <svg width="100%" height="100%">
-      <circle class="light-base light light-1"  />
-      <circle class="light-glow light light-1" />
+    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink= "http://www.w3.org/1999/xlink" width="100%" height="100%">
+      <circle class="light-base light light-1"  
+        r="2%" 
+        cx="30%" 
+        cy="40%"
+      />
+      <circle class="light-glow light light-1" 
+        r="4%"
+        cx="30%" 
+        cy="40%"
+      />
 
-      <circle class="light-base light light-2"  />
-      <circle class="light-glow light light-2" />
+      <circle class="light-base light light-2"  
+        r="2%" 
+        cx="85%" 
+        cy="55%"
+      />
+      <circle class="light-glow light light-2" 
+        r="4%"
+        cx="85%" 
+        cy="55%"
+      />
 
-      <circle class="light-base light light-3"  />
-      <circle class="light-glow light light-3" />
+      <circle class="light-base light light-3"  
+        r="2%"
+        cx="85%" 
+        cy="15%"/>
+      <circle class="light-glow light light-3" 
+        r="4%"
+        cx="85%" 
+        cy="15%"
+      />
 
-      <circle class="light-base light light-4"  />
-      <circle class="light-glow light light-4" />
+      <circle class="light-base light light-4"  
+        r="2%"
+        cx="20%" 
+        cy="20%"/>
+      <circle class="light-glow light light-4" 
+        r="4%"
+        cx="20%" 
+        cy="20%"/>
 
-      <circle class="light-base light light-5"  />
-      <circle class="light-glow light light-5" />
+      <circle class="light-base light light-5"  
+        r="2%"
+        cx="10%" 
+        cy="70%"/>
+      <circle class="light-glow light light-5" 
+        r="4%"
+        cx="10%" 
+        cy="70%"/>
     </svg>
   </div>
 
