center side modules as screen size increases

--- a/_sass/partials/_base.scss
+++ b/_sass/partials/_base.scss
@@ -10,16 +10,20 @@ $yellow: #ffd773;
 $body-font-family: "Rubik", sans-serif;
 $header-font-family: "Zilla Slab", serif;
 
-$xxl-multiplier: 2;
-$xl-multiplier: 1.5;
+//$xxl-multiplier: 2;
+$xxl-multiplier: 1.25;
+//$xl-multiplier: 1.5;
+$xl-multiplier: 1.25;
 $l-multiplier: 1;
 
 $sm-multiplier: 0.85;
 $xs-multiplier: 0.5;
 
 $base-px: 3px;
+//$xl-px: 4px;
 $xl-px: 4px;
-$xxl-px: 5px;
+$xxl-px: 4px;
+//$xxl-px: 5px;
 
 $sm-px: 2px;
 
