Add packages PDF

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,7 +30,7 @@ layout: default
         {% endfor %}
       </ul>
 
-      <button class="highlight">Check out our design packages</button>
+      <a href="/assets/design-packages.pdf"><button class="highlight">Check out our design packages</button></a>
     </div>
 
   </section>
