--- a/_sass/partials/_side-module.scss
+++ b/_sass/partials/_side-module.scss
@@ -8,11 +8,11 @@ $base-text-padding: 8rem;
 $base-li-padding: 3rem;
 $base-button-width: 12rem;
 
-$base-xxl-offset: 64rem;
-$base-xxl-button-offset: 44rem;
+$base-xxl-offset: 68rem;
+$base-xxl-button-offset: 48rem;
 
-$base-xl-offset: 49rem;
-$base-xl-button-offset: 29rem;
+$base-xl-offset: 42rem;
+$base-xl-button-offset: 22rem;
 
 $module-text-base-width: 50rem;
 $module-text-base-height: 14rem;
@@ -20,7 +20,9 @@ $module-text-base-height: 14rem;
 //@media only screen and (max-width: 2560px) {
   #team { 
     .content {
-      width: 65%;
+      width: 100rem;
+      margin: 0 auto;
+      //max-width: 100rem;
     }
 
     ul {
@@ -30,14 +32,16 @@ $module-text-base-height: 14rem;
     }
 
     .icon-container {
+      position: relative;
+      width: 100rem;
       height: $base-icon-size * $xxl-multiplier;
       padding-bottom: 1.5rem;
     }
 
     .icon {
       position: absolute;
-      //right: $base-icon-offset * $xxl-multiplier;
-      right: $base-xxl-offset * $xxl-multiplier;
+      right: $base-icon-offset * $xxl-multiplier;
+      //right: $base-xxl-offset * $xxl-multiplier;
       width: $base-icon-size * $xxl-multiplier;
       height: $base-icon-size * $xxl-multiplier;
       background: $navy;
@@ -57,7 +61,7 @@ $module-text-base-height: 14rem;
       position: absolute;
       width: $base-button-width * $xxl-multiplier;
       margin-top: -( ($base-icon-size  * $xxl-multiplier) / 8);
-      right: $base-xxl-button-offset  * $xxl-multiplier;
+      right: $base-button-offset  * $xxl-multiplier;
     }
 
     li {
@@ -114,11 +118,11 @@ $module-text-base-height: 14rem;
 
       .icon {
         //left: $base-icon-offset  * $xxl-multiplier;
-        left: $base-xxl-offset * $xxl-multiplier;
+        left: $base-icon-offset * $xxl-multiplier;
       }
 
       button {
-        left: $base-xxl-button-offset  * $xxl-multiplier;
+        left: $base-button-offset  * $xxl-multiplier;
       }
 
       .blue-line {
@@ -131,16 +135,18 @@ $module-text-base-height: 14rem;
 @media only screen and (max-width: $xl-breakpoint) {
   #team { 
     .content {
-      width: 90%;
+      width: 70rem;
+      margin: 0 auto;
     }
 
     .icon-container {
+      width: 70rem;
       height: $base-icon-size * $xl-multiplier;
     }
 
     .icon {
       //right: $base-icon-offset  * $xl-multiplier;
-      right: $base-xl-offset  * $xl-multiplier;
+      right: $base-icon-offset  * $xl-multiplier;
       width: $base-icon-size  * $xl-multiplier;
       height: $base-icon-size  * $xl-multiplier;
 
@@ -156,7 +162,7 @@ $module-text-base-height: 14rem;
     button {
       width: $base-button-width * $xl-multiplier;
       margin-top: -( ( $base-icon-size  * $xl-multiplier ) / 8);
-      right: $base-xl-button-offset  * $xl-multiplier;
+      right: $base-button-offset  * $xl-multiplier;
     }
 
     li {
@@ -189,11 +195,11 @@ $module-text-base-height: 14rem;
       }
 
       .icon {
-        left: $base-xl-offset  * $xl-multiplier;
+        left: $base-icon-offset  * $xl-multiplier;
       }
 
       button {
-        left: $base-xl-button-offset  * $xl-multiplier;
+        left: $base-button-offset  * $xl-multiplier;
       }
     }
   }
@@ -206,11 +212,14 @@ $module-text-base-height: 14rem;
     }
 
     .icon-container {
+      position: static;
+      width: 100%;
       height: $base-icon-size;
       padding-bottom: 1.5rem;
     }
 
     .icon {
+      position: absolute;
       right: $base-icon-offset;
       width: $base-icon-size;
       height: $base-icon-size;
@@ -225,6 +234,7 @@ $module-text-base-height: 14rem;
     }
 
     button {
+      position: absolute;
       width: $base-button-width;
       right: $base-button-offset;
       margin-top: -( ( $base-icon-size ) / 8);
