--- a/assets/main.scss
+++ b/assets/main.scss
@@ -59,7 +59,9 @@ $glow-duration: 1.75s;
     align-items: center;
     //background: $navy;
     //color: $off-white;
-    background-image: url( $hero-img-path + "desktop.svg" );
+    background-image: url( $hero-img-path + "desktop-large.svg" );
+    //background-image: url( $hero-img-path + "left.svg" );
+    //background-image: url( $hero-img-path + "right.svg" );
     background-size: auto 100%;
     background-position: center;
     background-repeat: no-repeat;
@@ -190,6 +192,7 @@ $glow-duration: 1.75s;
     height: 85vh;
     min-height: $base-hero-section-min-size * $xl-multiplier;
     max-height: $base-hero-section-max-size * $xl-multiplier;
+    background-image: url( $hero-img-path + "desktop.svg" );
 
     img {
       max-width: $base-logo-size * $xl-multiplier;
