--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -2,54 +2,63 @@
   <div id="lights" class="svg-container">
     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink= "http://www.w3.org/1999/xlink" width="100%" height="100%">
       <circle class="light-base light light-1"  
-        r="2%" 
+        r="0.5rem" 
         cx="30%" 
         cy="40%"
       />
       <circle class="light-glow light light-1" 
-        r="4%"
+        r="1rem"
         cx="30%" 
         cy="40%"
       />
 
       <circle class="light-base light light-2"  
-        r="2%" 
+        r="1.25rem" 
         cx="85%" 
         cy="55%"
       />
       <circle class="light-glow light light-2" 
-        r="4%"
+        r="2.5rem"
         cx="85%" 
         cy="55%"
       />
 
       <circle class="light-base light light-3"  
-        r="2%"
+        r="1rem"
         cx="85%" 
         cy="15%"/>
       <circle class="light-glow light light-3" 
-        r="4%"
+        r="2rem"
         cx="85%" 
         cy="15%"
       />
 
       <circle class="light-base light light-4"  
-        r="2%"
+        r="1.25rem"
         cx="20%" 
         cy="20%"/>
       <circle class="light-glow light light-4" 
-        r="4%"
+        r="2.5rem"
         cx="20%" 
         cy="20%"/>
 
       <circle class="light-base light light-5"  
-        r="2%"
+        r="1rem"
         cx="10%" 
         cy="70%"/>
       <circle class="light-glow light light-5" 
-        r="4%"
+        r="2rem"
         cx="10%" 
         cy="70%"/>
+
+        <circle class="light-base light light-6"  
+        r="1.25rem"
+        cx="50%" 
+        cy="80%"/>
+      <circle class="light-glow light light-6" 
+        r="2.5rem"
+        cx="50%" 
+        cy="80%"/>
     </svg>
   </div>
 
