--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,10 @@
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 
+  <link rel="icon" 
+      type="image/ico" 
+      href="{{ site.favicon }}">
+
   <!--<link rel="stylesheet" href="{{ "assets/main.css" | relative_url }}">-->
   <link rel="stylesheet" href="./assets/main.css">
   <link href="https://fonts.googleapis.com/css?family=Rubik:400,500|Zilla+Slab:400,400i" rel="stylesheet">
