changed small breakpoint for side module

--- a/_sass/partials/_side-module.scss
+++ b/_sass/partials/_side-module.scss
@@ -419,8 +419,8 @@ $module-text-base-height: 14rem;
   }
 }
 
-@media only screen and (max-width: 414px) {
-
+//@media only screen and (max-width: 414px) {
+@media only screen and (max-width: $sm-breakpoint) {
   #team { 
 
     ul {
