--- a/_sass/partials/_button.scss
+++ b/_sass/partials/_button.scss
@@ -104,7 +104,8 @@
   }
 }
 
-@media only screen and (max-width: 414px) {
+//@media only screen and (max-width: 414px) {
+@media only screen and (max-width: $sm-breakpoint) {
   button {
     padding: 0.75rem;
     min-width: 10rem;
