Updated copy text

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -65,7 +65,7 @@
   <section>
     <img id="logo" alt="Be Wilder Creative" src="{{ site.logo }}" />
 
-    <h2>An all-women studio providing beautiful, accessible, and functional design solutions.</h2>
+    <h2>An all-women creative studio providing engaging and functional design solutions… with gusto!</h2>
 
     <!--<button>Get to know us</button>-->
   </section>
