--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,7 @@ layout: default
   <section id="services">
     <header>
       <h1>What we can do for you</h1>
-      <p>We pride ourselves on practical yet imaginative design solutions to bring out the best of your brand.</p>
+      <p>We pride ourselves on practical yet imaginative design solutions to bring out the best of your brand. It’s about <b>you</b> and your <b>audience</b>.</p>
     </header>
 
     <div class="content">
@@ -37,8 +37,8 @@ layout: default
 
   <section id="team">
     <header>
-      <h1>Three women, three talents</h1>
-      <p>Three's a magic number, after all.</p>
+      <h1><span id="sparkle emoji" style="font-style: normal;">✨</span> The Ultimate Dream Team</h1>
+      <p>We’re here for you. Are you plotting to take over the world? Count us in...we’ll bring our design flair and visionary ideas. Aiming a little lower? We can start small and aim for your industry.</p>
     </header>
 
     <div class="content">
